--- a/calender.html
+++ b/calender.html
@@ -436,7 +436,7 @@ td[data-event]:hover::after {
 @media (max-width: 768px) {
     .heading-container {
   text-align: center;
-  margin: 30px 0;
+  margin: 30px 30px;
 }
 }
     </style>
