--- a/incidentratecal.html
+++ b/incidentratecal.html
@@ -256,6 +256,7 @@ h2 {
 @media (max-width: 768px) {
     .calculator-container {
         padding: 20px;
+        
     }
 
     .button {
@@ -270,6 +271,7 @@ h2 {
     .calculator-container {
         margin: 20px 15px; 
         padding: 15px; 
+        margin-top: 50px;
     }
 }
 
